--- a/style.css
+++ b/style.css
@@ -382,6 +382,11 @@ transition: right 0.5s;
         font-size: 14px;
     }
 }
+#msg{
+    color: #61b752;
+    margin-top: -40px;
+    display: block;
+}
 
 
     
